gen/PASCParser.java
// Generated from C:/Users/trung/Desktop/PASC_AST\PASC.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PASCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, WS=5, VARnumber=6, ANDnumber=7, ARRAYnumber=8, 
		BEGINnumber=9, CONSTnumber=10, DIVnumber=11, DOWNTOnumber=12, ELSEnumber=13, 
		ELSIFnumber=14, ENDnumber=15, ENDIFnumber=16, ENDLOOPnumber=17, ENDRECnumber=18, 
		EXITnumber=19, FORnumber=20, FORWARDnumber=21, FUNCTIONnumber=22, IFnumber=23, 
		ISnumber=24, LOOPnumber=25, NOTnumber=26, OFnumber=27, ORnumber=28, PROCEDUREnumber=29, 
		PROGRAMnumber=30, RECORDnumber=31, REPEATnumber=32, RETURNnumber=33, THENnumber=34, 
		TOnumber=35, TYPEnumber=36, UNTILnumber=37, WHILEnumber=38, ICONTSnumber=39, 
		PLUSnumber=40, MINUSnumber=41, TIMESnumber=42, COLEQnumber=43, LPARENnumber=44, 
		RPARENnumber=45, DOTnumber=46, SEMInumber=47, COLONnumber=48, COMMAnumber=49, 
		LTnumber=50, GTnumber=51, EQnumber=52, LEnumber=53, GEnumber=54, NEnumber=55, 
		IDnumber=56, LPAREN=57, RPAREN=58;
	public static final int
		RULE_program = 0, RULE_expr = 1, RULE_block = 2, RULE_loopStatement = 3, 
		RULE_ifStatement = 4, RULE_condition = 5, RULE_operator = 6, RULE_assign = 7, 
		RULE_constnumber = 8, RULE_constvalue = 9, RULE_paren = 10, RULE_identifier = 11, 
		RULE_declare = 12, RULE_string = 13, RULE_char = 14, RULE_forStatement = 15, 
		RULE_repeat = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "expr", "block", "loopStatement", "ifStatement", "condition", 
			"operator", "assign", "constnumber", "constvalue", "paren", "identifier", 
			"declare", "string", "char", "forStatement", "repeat"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'(*'", "'*)'", "'''", "'do'", null, "'var'", "'and'", "'array'", 
			"'begin'", "'const'", "'div'", "'downto'", "'else'", "'elsif'", "'end'", 
			"'endif'", "'endloop'", "'endrec'", "'exit'", "'for'", "'forward'", "'function'", 
			"'if'", "'is'", "'loop'", "'not'", "'of'", "'or'", "'procedure'", "'program'", 
			"'record'", "'repeat'", "'return'", "'then'", "'to'", "'type'", "'util'", 
			"'while'", null, "'+'", "'-'", "'*'", "':='", "'('", "')'", "'.'", "';'", 
			"':'", "','", "'<'", "'>'", "'=='", "'<='", "'>='", "'<>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "WS", "VARnumber", "ANDnumber", "ARRAYnumber", 
			"BEGINnumber", "CONSTnumber", "DIVnumber", "DOWNTOnumber", "ELSEnumber", 
			"ELSIFnumber", "ENDnumber", "ENDIFnumber", "ENDLOOPnumber", "ENDRECnumber", 
			"EXITnumber", "FORnumber", "FORWARDnumber", "FUNCTIONnumber", "IFnumber", 
			"ISnumber", "LOOPnumber", "NOTnumber", "OFnumber", "ORnumber", "PROCEDUREnumber", 
			"PROGRAMnumber", "RECORDnumber", "REPEATnumber", "RETURNnumber", "THENnumber", 
			"TOnumber", "TYPEnumber", "UNTILnumber", "WHILEnumber", "ICONTSnumber", 
			"PLUSnumber", "MINUSnumber", "TIMESnumber", "COLEQnumber", "LPARENnumber", 
			"RPARENnumber", "DOTnumber", "SEMInumber", "COLONnumber", "COMMAnumber", 
			"LTnumber", "GTnumber", "EQnumber", "LEnumber", "GEnumber", "NEnumber", 
			"IDnumber", "LPAREN", "RPAREN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PASC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PASCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAMnumber() { return getToken(PASCParser.PROGRAMnumber, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMInumber() { return getToken(PASCParser.SEMInumber, 0); }
		public DeclareContext declare() {
			return getRuleContext(DeclareContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PASCListener ) ((PASCListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PASCListener ) ((PASCListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PASCVisitor ) return ((PASCVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(PROGRAMnumber);
			setState(35);
			expr(0);
			setState(36);
			match(SEMInumber);
			setState(37);
			declare();
			setState(38);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ParenContext paren() {
			return getRuleContext(ParenContext.class,0);
		}
		public ConstvalueContext constvalue() {
			return getRuleContext(ConstvalueContext.class,0);
		}
		public DeclareContext declare() {
			return getRuleContext(DeclareContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public LoopStatementContext loopStatement() {
			return getRuleContext(LoopStatementContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ConstnumberContext constnumber() {
			return getRuleContext(ConstnumberContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public CharContext char() {
			return getRuleContext(CharContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public RepeatContext repeat() {
			return getRuleContext(RepeatContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public TerminalNode COMMAnumber() { return getToken(PASCParser.COMMAnumber, 0); }
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PASCListener ) ((PASCListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PASCListener ) ((PASCListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PASCVisitor ) return ((PASCVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(41);
				paren();
				}
				break;
			case 2:
				{
				setState(42);
				constvalue();
				}
				break;
			case 3:
				{
				setState(43);
				declare();
				}
				break;
			case 4:
				{
				setState(44);
				ifStatement();
				}
				break;
			case 5:
				{
				setState(45);
				loopStatement();
				}
				break;
			case 6:
				{
				setState(46);
				identifier();
				}
				break;
			case 7:
				{
				setState(47);
				constnumber();
				}
				break;
			case 8:
				{
				setState(48);
				string();
				}
				break;
			case 9:
				{
				setState(49);
				char();
				}
				break;
			case 10:
				{
				setState(50);
				forStatement();
				}
				break;
			case 11:
				{
				setState(51);
				repeat();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(65);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(63);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(54);
						if (!(precpred(_ctx, 14))) throw new FailedPredicateException(this, "precpred(_ctx, 14)");
						setState(55);
						operator();
						setState(56);
						expr(15);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(58);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(59);
						match(COMMAnumber);
						setState(60);
						expr(11);
						}
						break;
					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(61);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						setState(62);
						assign();
						}
						break;
					}
					} 
				}
				setState(67);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode BEGINnumber() { return getToken(PASCParser.BEGINnumber, 0); }
		public TerminalNode ENDnumber() { return getToken(PASCParser.ENDnumber, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PASCListener ) ((PASCListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PASCListener ) ((PASCListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PASCVisitor ) return ((PASCVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(BEGINnumber);
			setState(70); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(69);
				expr(0);
				}
				}
				setState(72); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << VARnumber) | (1L << CONSTnumber) | (1L << FORnumber) | (1L << IFnumber) | (1L << LOOPnumber) | (1L << REPEATnumber) | (1L << WHILEnumber) | (1L << ICONTSnumber) | (1L << IDnumber) | (1L << LPAREN))) != 0) );
			setState(74);
			match(ENDnumber);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopStatementContext extends ParserRuleContext {
		public LoopStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopStatement; }
	 
		public LoopStatementContext() { }
		public void copyFrom(LoopStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LoopContext extends LoopStatementContext {
		public TerminalNode LOOPnumber() { return getToken(PASCParser.LOOPnumber, 0); }
		public TerminalNode ENDLOOPnumber() { return getToken(PASCParser.ENDLOOPnumber, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public LoopContext(LoopStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PASCListener ) ((PASCListener)listener).enterLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PASCListener ) ((PASCListener)listener).exitLoop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PASCVisitor ) return ((PASCVisitor<? extends T>)visitor).visitLoop(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileContext extends LoopStatementContext {
		public TerminalNode WHILEnumber() { return getToken(PASCParser.WHILEnumber, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public WhileContext(LoopStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PASCListener ) ((PASCListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PASCListener ) ((PASCListener)listener).exitWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PASCVisitor ) return ((PASCVisitor<? extends T>)visitor).visitWhile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopStatementContext loopStatement() throws RecognitionException {
		LoopStatementContext _localctx = new LoopStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_loopStatement);
		int _la;
		try {
			int _alt;
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WHILEnumber:
				_localctx = new WhileContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				match(WHILEnumber);
				setState(77);
				condition(0);
				setState(79); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(78);
						expr(0);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(81); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case LOOPnumber:
				_localctx = new LoopContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				match(LOOPnumber);
				setState(85); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(84);
					expr(0);
					}
					}
					setState(87); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << VARnumber) | (1L << CONSTnumber) | (1L << FORnumber) | (1L << IFnumber) | (1L << LOOPnumber) | (1L << REPEATnumber) | (1L << WHILEnumber) | (1L << ICONTSnumber) | (1L << IDnumber) | (1L << LPAREN))) != 0) );
				setState(89);
				match(ENDLOOPnumber);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public TerminalNode IFnumber() { return getToken(PASCParser.IFnumber, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode THENnumber() { return getToken(PASCParser.THENnumber, 0); }
		public TerminalNode ELSEnumber() { return getToken(PASCParser.ELSEnumber, 0); }
		public TerminalNode ENDIFnumber() { return getToken(PASCParser.ENDIFnumber, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PASCListener ) ((PASCListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PASCListener ) ((PASCListener)listener).exitIfStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PASCVisitor ) return ((PASCVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ifStatement);
		int _la;
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				match(IFnumber);
				setState(94);
				condition(0);
				setState(95);
				match(THENnumber);
				setState(97); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(96);
					expr(0);
					}
					}
					setState(99); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << VARnumber) | (1L << CONSTnumber) | (1L << FORnumber) | (1L << IFnumber) | (1L << LOOPnumber) | (1L << REPEATnumber) | (1L << WHILEnumber) | (1L << ICONTSnumber) | (1L << IDnumber) | (1L << LPAREN))) != 0) );
				setState(101);
				match(ELSEnumber);
				setState(108);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case BEGINnumber:
					{
					setState(102);
					block();
					}
					break;
				case T__0:
				case T__2:
				case VARnumber:
				case CONSTnumber:
				case FORnumber:
				case IFnumber:
				case LOOPnumber:
				case REPEATnumber:
				case WHILEnumber:
				case ICONTSnumber:
				case IDnumber:
				case LPAREN:
					{
					setState(104); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(103);
						expr(0);
						}
						}
						setState(106); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << VARnumber) | (1L << CONSTnumber) | (1L << FORnumber) | (1L << IFnumber) | (1L << LOOPnumber) | (1L << REPEATnumber) | (1L << WHILEnumber) | (1L << ICONTSnumber) | (1L << IDnumber) | (1L << LPAREN))) != 0) );
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(110);
				match(ENDIFnumber);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				match(IFnumber);
				setState(113);
				condition(0);
				setState(114);
				match(THENnumber);
				setState(116); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(115);
					expr(0);
					}
					}
					setState(118); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << VARnumber) | (1L << CONSTnumber) | (1L << FORnumber) | (1L << IFnumber) | (1L << LOOPnumber) | (1L << REPEATnumber) | (1L << WHILEnumber) | (1L << ICONTSnumber) | (1L << IDnumber) | (1L << LPAREN))) != 0) );
				setState(120);
				match(ENDIFnumber);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public Token compare;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode EQnumber() { return getToken(PASCParser.EQnumber, 0); }
		public TerminalNode LEnumber() { return getToken(PASCParser.LEnumber, 0); }
		public TerminalNode GEnumber() { return getToken(PASCParser.GEnumber, 0); }
		public TerminalNode NEnumber() { return getToken(PASCParser.NEnumber, 0); }
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public TerminalNode ANDnumber() { return getToken(PASCParser.ANDnumber, 0); }
		public TerminalNode ORnumber() { return getToken(PASCParser.ORnumber, 0); }
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PASCListener ) ((PASCListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PASCListener ) ((PASCListener)listener).exitCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PASCVisitor ) return ((PASCVisitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		return condition(0);
	}

	private ConditionContext condition(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ConditionContext _localctx = new ConditionContext(_ctx, _parentState);
		ConditionContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_condition, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(125);
			expr(0);
			setState(126);
			((ConditionContext)_localctx).compare = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQnumber) | (1L << LEnumber) | (1L << GEnumber) | (1L << NEnumber))) != 0)) ) {
				((ConditionContext)_localctx).compare = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(127);
			expr(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(137);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(135);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
					case 1:
						{
						_localctx = new ConditionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_condition);
						setState(129);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(130);
						match(ANDnumber);
						setState(131);
						condition(3);
						}
						break;
					case 2:
						{
						_localctx = new ConditionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_condition);
						setState(132);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(133);
						match(ORnumber);
						setState(134);
						condition(2);
						}
						break;
					}
					} 
				}
				setState(139);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
